--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula03</title>
+    <link rel="stylesheet" href="style/estilo.css">
 </head>
+
 <body>
-    <!--Tag para usar em título-->
-    <h1>Minha página web</h1>
-    <h2>Minha página web</h2>
-    <h3>Minha página web</h3>
-    
+
+    <header>
+        <nav></nav>
+    </header>
+
+    <main>
+        <h1>Descanse em paz, lenda...</h1>
+        <img src="img/cafe.jpg" class="imagens">
+        <img src="img/brasil.png" class="imagens"> 
+        <img src="img/sopa p nois.jpg" class="imagens">
+
+        <p>trollface... </p>
+        <p>brasil</p>
+    </main>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
